<resources>
    <string name="app_name">KennelService</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dog_list">My Dogs</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_Login">Login</string>
    <string name="menu_Profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="menu_appointment">appointment</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_about">About</string>
    <string name="Breeds_of_Dog">Dog Breeds</string>
    <string name="menu_Appointment">Appointment</string>
    <string name="search">Search</string>
    <string name="Appointment">Appointment</string>
</resources>
