<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.suman.kennelservice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.suman.kennelservice.ui.gallery.BreedsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.suman.kennelservice.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.suman.kennelservice.ui.tools.ToolsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.suman.kennelservice.ui.Appointment.AppointmentFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.suman.kennelservice.ui.DogRegister.DogRegisterFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.suman.kennelservice.ui.MyProfile.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/nav_dogdetail"
        android:name="com.suman.kennelservice.ui.gallery.DogbreeddetailsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/dogbreeddetails_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.suman.kennelservice.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout_fragment" />
</navigation>